Add header layout

--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
     
     <!-- Header -->
     <header>
-        <div id="logo">
-            <img src="resources/images/ic-logo.svg" alt="colmar logo">
-            <h1>ColmarAcademy</h1>
-        </div>
+        <h1><img src="resources/images/ic-logo.svg" alt="colmar logo"><span>Colmar</span>Academy</h1>
         
         <nav>
             <ul>
-                <li><a href="">On Campus</a></li>
+                <li><a href="">On campus</a></li>
                 <li><a href="">Online</a></li>
                 <li><a href="">For companies</a></li>
                 <li><a href="">Sign in</a></li>
