--- a/index.html
+++ b/index.html
@@ -22,14 +22,52 @@
     </nav>
 </header>
 
-    <!-- Start -->
+    
 <main>
+    <!-- Start -->
     <section id="start">
         <img src="resources/images/banner.jpg" alt="banner">
         <div class="text">
             <h2>Learn something new everyday</h2>
             <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
             <a class="button" href="">Start here</a>
+        </div>
+    </section>
+
+    <!-- Practice -->
+    <section id="practice">
+        <div class="practice-img">
+            <img src="resources/images/information-main.jpg" alt="man reading">
+            <h2>It doesn't hurt to keep practicing</h2>
+            <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+                p class="quote">Emanuel, Sr Strategist at Hiring.com</p>
+            
+        </div>
+        <div class="articles">
+            <div class="article">
+                <img src="resources/images/information-orientation.jpg" alt="walking">
+                <div class="text">
+                    <h4>Orientation date</h4>
+                    <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                    <a href="">Read more</a>
+                </div>
+            </div>
+            <div class="article">
+                <img src="resources/images/information-campus.jpg" alt="walking">
+                <div class="text">
+                    <h4>Our campus</h4>
+                    <p>Find which campus is close by you</p>
+                    <a href="">Read more</a>
+                </div>
+            </div>
+            <div class="article">
+                <img src="resources/images/information-guest-lecture.jpg" alt="walking">
+                <div class="text">
+                    <h4>Our guest lecture</h4>
+                    <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+                    <a href="">Read more</a>
+                </div>
+            </div>
         </div>
     </section>
 
