--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <li><a href="">Sign in</a></li>
         </ul>
     </nav>
+
+    <nav class="mobile">
+
+    </nav>
 </header>
 
     
@@ -70,6 +74,62 @@
             </div>
         </div>
     </section>
+
+    <!-- Learning -->
+    <section id="learning">
+        <h2>Start learning</h2>
+        <div class="courses">
+            <div class="course">
+                <img src="resources/images/course-software.jpg" alt="computer">
+                <div class="text">
+                    <h4>Software engineering</h4>
+                    <p class="course-category">courses</p>
+                    <p>Web Development, Mobile Development, iOT, APIs</p>
+                </div>
+            </div>
+            <div class="course">
+                <img src="resources/images/course-computer-art.jpg" alt="phone">
+                <div class="text">
+                    <h4>Computer Art</h4>
+                    <p class="course-category">courses</p>
+                    <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+                </div>
+            </div>
+            <div class="course">
+                <img src="resources/images/course-design.jpg" alt="camera">
+                <div class="text">
+                    <h4>Design</h4>
+                    <p class="course-category">courses</p>
+                    <p>User Experience Design, User Research, Visual Design</p>
+                </div>
+            </div>
+            <div class="course">
+                <img src="resources/images/course-data.jpg" alt="statistics">
+                <div class="text">
+                    <h4>Data</h4>
+                    <p class="course-category">courses</p>
+                    <p>Data Science, Big Data, SQL, Data Visualization</p>
+                </div>
+            </div>
+            <div class="course">
+                <img src="resources/images/course-business.jpg" alt="chess">
+                <div class="text">
+                    <h4>Business</h4>
+                    <p class="course-category">courses</p>
+                    <p>Product Development, Business Development, Startup</p>
+                </div>
+            </div>
+            <div class="course">
+                <img src="resources/images/course-marketing.jpg" alt="apple watch">
+                <div class="text">
+                    <h4>Marketing</h4>
+                    <p class="course-category">courses</p>
+                    <p>Analytics, Content Marketing, Mobile Marketing</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 </main>
 
