--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <img src="resources/images/information-main.jpg" alt="man reading">
             <h2>It doesn't hurt to keep practicing</h2>
             <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-                p class="quote">Emanuel, Sr Strategist at Hiring.com</p>
+            <p class="quote">Emanuel, Sr Strategist at Hiring.com</p>
             
         </div>
         <div class="articles">
